[package]
name = "acronym-lookup"
description = "Blazingly fast CLI tool for looking up acronyms"
authors = ["mfurak"]
version = "0.26.0"
edition = "2024"

[[bin]]
name = "al"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12.24", features = ["blocking", "json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
