[package]
name = "acronym-lookup"
authors = ["mfurak"]
description = "Blazingly fast CLI tool for looking up acronyms"
edition = "2024"
version = "0.27.0"

[[bin]]
name = "al"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
