[package]
name = "acronym-lookup"
authors = ["mfurak"]
description = "Blazingly fast CLI tool for looking up acronyms"
edition = "2024"
version = "0.27.1"

[[bin]]
name = "al"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
